# bu_dingo_d1

./: .gitmodules  README.md  dingo.repos
src/bosu08_custom/: README.md  start.sh
src/bosu08_custom/bosu08_d1/bosu08_d1_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d1/bosu08_d1_description/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d1/bosu08_d1_description/urdf/: bosu08_d1.urdf.xacro
src/bosu08_custom/bosu08_d2/bosu08_d2_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d2/bosu08_d2_bringup/scripts/: setup.bash  start.sh
src/bosu08_custom/bosu08_d2/bosu08_d2_description/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d2/bosu08_d2_description/urdf/: bosu08_d2.urdf.xacro
src/bosu08_custom/bosu08_d3/bosu08_d3_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d3/bosu08_d3_bringup/scripts/: setup.bash
src/bosu08_custom/bosu08_d3/bosu08_d3_description/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d4/bosu08_d4_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_d4/bosu08_d4_bringup/scripts/: setup.bash
src/bosu08_custom/bosu08_d4/bosu08_d4_description/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu08_dingo/bosu08_dingo_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu_d1_sim/bosu_d1_sim_bringup/: CMakeLists.txt  package.xml
src/bosu08_custom/bosu_d1_sim/bosu_d1_sim_bringup/scripts/: setup.bash
src/bosu08_custom/bosu_d1_sim/bosu_d1_sim_description/: CMakeLists.txt  package.xml
src/pc2l/: package.xml
src/pc2l/launch/: start.launch
(+11 files in other folders)
