<?xml version="1.0"?>
<package format="2">
  <name>bosu08_d4_bringup</name>
  <version>0.0.0</version>
  <description>The BOSU08 dingo4 bring up package</description>
  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>
  <license>BSD</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
