<?xml version="1.0"?>
<package format="2">
  <name>bosu_d1_sim_bringup</name>
  <version>0.0.0</version>
  <description>The BOSU08 dingo1 bring up package for simulation</description>
  <maintainer email="royx@bu.edu">Roy Xing</maintainer>
  <license>BSD</license>

  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
